--- a/style/style.css
+++ b/style/style.css
@@ -533,6 +533,7 @@ ul {
 .section-wrapper_dark,
 .section-wrapper_gray {
   position: relative;
+  overflow-x: hidden;
 }
 
 .section-wrapper::before,
@@ -1343,6 +1344,73 @@ ul {
 
 .footer__button-up {
   cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  overflow-y: auto;
+}
+
+.modal_active {
+  display: block;
+}
+
+.modal__body {
+  background-color: #243343;
+  max-width: 340px;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  box-shadow: 0 0 18px rgb(0 0 0 / 50%), 0 0 0 5px #243343;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  min-height: 420px;
+  transform: translateX(-50%);
+}
+
+.modal__title {
+  margin-bottom: 18px;
+  color: #fff;
+  font-size: 28px;
+}
+
+.modal__description {
+  color: #ffffff;
+}
+
+.modal__close {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  top: 10px;
+  left: 95%;
+  cursor: pointer;
+}
+
+.modal__close-line {
+  position: absolute;
+  top: 50%;
+  height: 3px;
+  width: 100%;
+  background-color: #ffffff;
+}
+
+.modal__close-line:first-child {
+  transform: rotate(45deg);
+}
+
+.modal__close-line:last-child {
+  transform: rotate(-45deg);
 }
 
 @media screen and (max-width: 1024px) {
